# haskellsweeper

./: README.md  feedback.txt  progress.txt  proposal.txt  public-release.md  report.txt
src/: Board.hs  Main.hs  minesweeper.cabal
src/saveData/: sampleSave
