cabal-version:      2.4
name:               minesweeper
version:            0.1.0.0

executable minesweeper
  hs-source-dirs:   .
  main-is:          Main.hs
  other-modules:    Board
  -- The following allows a different name than `Main` for the main module
  ghc-options:      -main-is main
  build-depends:    base, random, containers
  default-language: GHC2021
